--- a/src/app/restaurants/restaurants.page.html
+++ b/src/app/restaurants/restaurants.page.html
@@ -16,6 +16,7 @@
 
   <ion-card class="card" *ngFor="let r of rest.data">
     <ion-card-title>{{r.restuarant_name}}</ion-card-title>
+    <ion-card-content>{{r.address}}</ion-card-content>
     <img src = 'assets/images/logo.png' style = "width: 100;height: 100;">
     <ion-button expand="block" color = 'success' class="butn" (click)="secOrder()">View menu</ion-button>
   </ion-card>
