presentation july end

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-col>
       <ion-icon name="menu-sharp" size="large"(click)="presentActionSheet()"></ion-icon>
     </ion-col>
-    
+
     <ion-title>
       Kasi Food Hub
     </ion-title>
@@ -83,7 +83,7 @@
               <ion-img class = "back-image" src="/assets/images/logo2.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
               
             </ion-card>
@@ -94,7 +94,7 @@
               <ion-img class = "back-image" src="/assets/images/logo.png"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
             </ion-card>
           </ion-col>
@@ -104,7 +104,7 @@
               <ion-img class = "back-image" src="/assets/images/food1.png"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
               
             </ion-card>
@@ -116,7 +116,7 @@
               <ion-img src="/assets/images/food2.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
             </ion-card>
           </ion-col>
@@ -129,7 +129,7 @@
               <ion-img src="/assets/images/food3.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
               
             </ion-card>
@@ -140,7 +140,7 @@
               <ion-img class = "back-image" src="/assets/images/food4.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
             </ion-card>
           </ion-col>
@@ -150,7 +150,7 @@
               <ion-img class = "back-image" src="/assets/images/food5.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
               
             </ion-card>
@@ -175,7 +175,7 @@
               <ion-img class = "back-image" src="/assets/images/kota.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
               
             </ion-card>
@@ -186,7 +186,7 @@
               <ion-img class = "back-image" src="/assets/images/kota1.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
             </ion-card>
           </ion-col>
@@ -197,7 +197,7 @@
               <ion-img class = "back-image" src="/assets/images/kota2.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
               
             </ion-card>
@@ -222,7 +222,7 @@
               <ion-img class = "back-image" src="/assets/images/kota4.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
               
             </ion-card>
@@ -233,7 +233,7 @@
               <ion-img src="/assets/images/kota5.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
             </ion-card>
           </ion-col>
@@ -243,7 +243,7 @@
               <ion-img src="/assets/images/logo2.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+                <p>Delicious Dish</p>
               </ion-card-content>
               
             </ion-card >
