--- a/src/app/pages/cart-modal/cart-modal.page.html
+++ b/src/app/pages/cart-modal/cart-modal.page.html
@@ -101,7 +101,7 @@
             <b>{{ p.name }}</b>
           </ion-col>
           <ion-col size="3" class="ion-text-end">
-          <ion-label color="secondary">
+          <ion-label color="dark">
               {{ p.amount * p.price }}
           </ion-label>
           </ion-col>
@@ -115,7 +115,7 @@
             Total R:
           </ion-col>
           <ion-col size="3" class="ion-text-end">
-          <ion-label color="secondary">
+          <ion-label color="dark">
               {{ getTotal() }}
           </ion-label>
           </ion-col>
