--- a/src/app/pages/order2/order2.page.scss
+++ b/src/app/pages/order2/order2.page.scss
@@ -1,3 +1,16 @@
+p{
+
+color:rgb(0, 89, 255);
+font-size: 20px;
+
+}
+
+h3{
+
+    color:rgb(0, 89, 255);
+    font-size: 20px;    
+
+}
 
 h4{
     text-align: center;
