--- a/src/app/pages/order2/order2.page.html
+++ b/src/app/pages/order2/order2.page.html
@@ -34,14 +34,15 @@
       </ion-segment-button>
     </ion-segment> -->
     <ion-grid fixed>
-      <ion-row> <!--This is just one row with mulitiple columns-->
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+      <ion-row > <!--This is just one row with mulitiple columns-->
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let menuItem of menuItems;let menuItem = index">
           <ion-card>
             <ion-img class = "back-image" src="/assets/images/logo2.jpg" (click) = "addToCart(product)"></ion-img>
             <ion-card-content>
-              <ion-card-title>Dikilana</ion-card-title>
-              <h3>R 15</h3>
-              <p>Scrumptious 6 Runaways with spice</p>
+              <ion-card-title>{{menuItem.item_name}}</ion-card-title><br>
+             <h3>Price R: {{menuItem.item_price}}</h3>
+              <p>Description: {{menuItem.item_description}}</p>
+              <p>Status(1 = active and 0 = inactive):{{menuItem.itemStatus}}</p>
             </ion-card-content>
             
           </ion-card>
@@ -136,7 +137,7 @@
       <ion-row> <!--This is just one row with mulitiple columns-->
         <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
           <ion-card>
-            <ion-img class = "back-image" src="/assets/images/kota.jpg"></ion-img>
+            <ion-img class = "back-image" src="/assets/images/kota.png"></ion-img>
             <ion-card-content>
               <ion-card-title>Mamas Kitchen</ion-card-title>
               <p>Kasi Kota with chips, vienna, atchar, patty with drink</p>
