--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -172,7 +172,7 @@
         <ion-row> <!--This is just one row with mulitiple columns-->
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
             <ion-card (click)="gotoMenu1()">
-              <ion-img class = "back-image" src="/assets/images/kota.jpg"></ion-img>
+              <ion-img class = "back-image" src="/assets/images/kota.png"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
                 <p>Delicious Dish</p>
