--- a/src/app/pages/cart-modal/cart-modal.page.html
+++ b/src/app/pages/cart-modal/cart-modal.page.html
@@ -1,55 +1,4 @@
-
 <!-- <ion-content fullscreen>
-
-    <ion-list>
-
-        <ion-card> *ngFor = "let p of products>
-
-          <ion-header>
-
-                <ion-card-title>{{p.name}}</ion-card-title>
-
-          </ion-header>
-
-
-        </ion-card>
-
-      </ion-list>
-
-            <ion-col size="2" offset="5">
-              
-              <ion-button color="medium" fill="clear" (click)="removeCartItem(p)">
-                <ion-icon name="trash"></ion-icon>
-              </ion-button>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col size="9">
-              <b>{{ p.name }}</b>
-            </ion-col>
-            <ion-col size="3" class="ion-text-end">
-              {{ p.amount * p.price | currency:'R'}}
-            </ion-col>
-          </ion-row>
-          <ion-row *ngFor="let e of ext">
-            <ion-label>{{e.name}}</ion-label>
-          </ion-row>
-        </ion-grid>
-      </ion-item>
-    </ion-card>
-      <ion-item>
-        <ion-row>
-          <ion-col color="tertiary" ><b>Total</b>
-            {{getTotal() | currency:'R'}}</ion-col>
-        </ion-row>
-      </ion-item>
-    </ion-list>
-    <ion-button id="check" expand="full" (click)="checkout()" (click)="close()">Checkout</ion-button>
-  </div>
-</ion-content> -->
-
-
-<ion-content fullscreen>
 
   <ion-grid>
     <ion-row>
@@ -129,4 +78,78 @@
   </ion-button>
 </div>
 
-</ion-content>
+</ion-content> -->
+
+<ion-header>
+  <ion-toolbar color="danger">
+
+    <ion-title>
+      Review Your Cart
+    </ion-title>
+
+    <ion-button color="clear" size="small" slot="end" (click)="close()">
+      <ion-icon name="close"></ion-icon>
+    </ion-button>
+
+  </ion-toolbar>
+</ion-header>
+<ion-content>
+ 
+    <div class="ion-padding">
+   
+      <ion-list>
+        <ion-item *ngFor="let p of cart" class="ion-text-wrap">
+          <ion-grid>
+            <ion-row class="ion-align-items-center">
+              <ion-col size="2" class="ion-align-self-center">
+                <ion-button color="medium" fill="clear" (click)="decreaseCartItem(p)">
+                  <ion-icon name="remove-circle" slot="icon-only"></ion-icon>
+                </ion-button>
+              </ion-col>
+   
+              <ion-col size="1" class="ion-align-self-center">
+                {{p.qty}}
+              </ion-col>
+   
+              <ion-col size="2" class="ion-align-self-center">
+                <ion-button color="medium" fill="clear" (click)="increaseCartItem(p)">
+                  <ion-icon name="add-circle" slot="icon-only"></ion-icon>
+                </ion-button>
+              </ion-col>
+   
+              <ion-col size="2" offset="5">
+                <ion-button color="medium" fill="clear" (click)="removeCartItem(p)">
+                  <ion-icon name="close-circle" slot="icon-only"></ion-icon>
+                </ion-button>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col size="9">
+                <b>{{ p.name }}</b>
+              </ion-col>
+              <ion-col size="3" class="ion-text-end">
+                {{p.qty * p.price | currency:'R' }}
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-item>
+        <ion-item>
+          <ion-grid>
+            <ion-row>
+              <ion-col size="9">
+                Total:
+              </ion-col>
+              <ion-col size="3" class="ion-text-end">
+                {{ getTotal() | currency:'R' }}
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-item>
+      </ion-list>
+   
+      <a href = "www.stripe.com"></a> <ion-button expand="full" color="dark" (click)="carddetails()">
+        Pay Now
+      </ion-button>
+    </div>
+   
+  </ion-content>
