--- a/src/app/pages/order2/order2.page.html
+++ b/src/app/pages/order2/order2.page.html
@@ -1,235 +1,39 @@
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title>
+     Restaurant Menu List
+    </ion-title>
 
-  <ion-header>
+    <ion-button color="dark" size="small" slot="end" (click)="openCart()" #cart>
+      {{ cartItemCount | async }}
+      <ion-icon name="cart" slot="end"></ion-icon>
+    </ion-button>
+  </ion-toolbar>
+</ion-header>
 
-    <ion-toolbar color="warning">
-      <ion-icon name="arrow-black" (click)="backButton()"></ion-icon>
-      <ion-title>Order</ion-title>
-    </ion-toolbar>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
-    <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"/>
-  </ion-header>
-  
-  <ion-content>
-    <ion-fab vertical="top" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="openCart()" #cart>
-      <div class="cart-length">{{cartItemCount | async}}</div>
-      <ion-icon name="cart" class="cart-icon"></ion-icon>
-    </ion-fab-button>
-    </ion-fab>
-  
-     <h4>Menu</h4>
-    <!-- <ion-segment scrollable value="heart">
-      <ion-segment-button value="home">
-        <ion-icon name="home"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button value="heart">
-        <ion-icon name="heart"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button value="pin">
-        <ion-icon name="pin"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button value="call">
-        <ion-icon name="call"></ion-icon>
-      </ion-segment-button>
-    </ion-segment> -->
-    <ion-grid fixed>
-      <ion-row > <!--This is just one row with mulitiple columns-->
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let menuItem of menuItems;let menuItem = index">
-          <ion-card>
-            <ion-img class = "back-image" src="/assets/images/logo2.jpg" (click) = "addToCart(product)"></ion-img>
-            <ion-card-content>
-              <ion-card-title>{{menuItem.item_name}}</ion-card-title><br>
-             <h3>Price R: {{menuItem.item_price}}</h3>
-              <p>Description: {{menuItem.item_description}}</p>
-              <p>Status(1 = active and 0 = inactive):{{menuItem.itemStatus}}</p>
-            </ion-card-content>
-            
-          </ion-card>
-        </ion-col>
-  
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img class = "back-image" src="/assets/images/logo.png" (click) = "addToCart(product)"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Half Kop</ion-card-title>
-              <h3>R 30</h3>
-              <p>King Kop of sheep</p>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-     
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img class = "back-image" src="/assets/images/food1.png" (click) = "addToCart(product)"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Steak & Pap</ion-card-title>
-              <h3>R 50</h3>
-              <p>Pap & Steak served with some sides</p>
-            </ion-card-content>
-            
-          </ion-card>
-         
-        </ion-col>
-  
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img src="/assets/images/food2.jpg"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Salad</ion-card-title>
-              <h3>R 15</h3>
-              <p>Essential veggies for a healthy kasi lifestyle</p>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-  
-      </ion-row>
-  
-      <ion-row> <!--This is just one row with mulitiple columns-->
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img src="/assets/images/food3.jpg"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Samoosa</ion-card-title>
-              <h3>R 10</h3>
-              <p>East meets Kasi</p>
-            </ion-card-content>
-            
-          </ion-card>
-        </ion-col>
-  
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img class = "back-image" src="/assets/images/food4.jpg"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Spathlo & cold drink</ion-card-title>
-              <h3>R 40</h3>
-              <p>Kasi Kota with chips, vienna, atchar, patty with drink</p>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-     
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img class = "back-image" src="/assets/images/food5.jpg"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Nqombhothi 2Litre</ion-card-title>
-              <h3>R 8</h3>
-              <p>Taste of the real african goodness</p>
-            </ion-card-content>
-            
-          </ion-card>
-         
-        </ion-col>
-  
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img class = "back-image" src="/assets/images/food6.jpg"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Mamas Kitchen</ion-card-title>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elitme. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-  
-      </ion-row>
-  
-      <ion-row> <!--This is just one row with mulitiple columns-->
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img class = "back-image" src="/assets/images/kota.png"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Mamas Kitchen</ion-card-title>
-              <p>Kasi Kota with chips, vienna, atchar, patty with drink</p>
-            </ion-card-content>
-            
-          </ion-card>
-        </ion-col>
-  
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img class = "back-image" src="/assets/images/kota1.jpg"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Mamas Kitchen</ion-card-title>
-              <p>Kasi Kota with chips, vienna, atchar, patty with drink</p>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-     
-     
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img class = "back-image" src="/assets/images/kota2.jpg"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Mamas Kitchen</ion-card-title>
-              <p>Kasi Kota with chips, vienna, atchar, patty with drink</p>
-            </ion-card-content>
-            
-          </ion-card>
-         
-        </ion-col>
-  
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img class = "back-image" src="/assets/images/kota3.jpg"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Mamas Kitchen</ion-card-title>
-              <p>Kasi Platter mix</p>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-  
-      </ion-row>
-  
-      <ion-row> <!--This is just one row with mulitiple columns-->
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img class = "back-image" src="/assets/images/kota4.jpg"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Mamas Kitchen</ion-card-title>
-              <p>Kasi Kota with chips, vienna, atchar, patty with drink</p>
-            </ion-card-content>
-            
-          </ion-card>
-        </ion-col>
-  
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img src="/assets/images/kota5.jpg"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Mamas Kitchen</ion-card-title>
-              <p>Kasi Kota with chips, vienna, atchar, patty with drink</p>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-     
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img src="/assets/images/logo2.jpg"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Mamas Kitchen</ion-card-title>
-              <p>Kasi Kota with chips, vienna, atchar, patty with drink</p>
-            </ion-card-content>
-            
-          </ion-card >
-         
-        </ion-col>
-  
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-          <ion-card>
-            <ion-img src="/assets/images/food6.jpg"></ion-img>
-            <ion-card-content>
-              <ion-card-title>Mamas Kitchen</ion-card-title>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elitme. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-  
-      </ion-row>
-  
-    </ion-grid>
-  
-  </ion-content>
+<ion-content [fullscreen]="true">
+  <ion-list>
+    <ion-card *ngFor="let item of products">
+        <ion-card-header>
+          <ion-card-title>{{item.name}}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-row>
+            <ion-col size="8">
+              <ion-label color="secondary">
+                <b>{{ item.price | currency: 'R' }}</b>
+              </ion-label>
+            </ion-col>
+            <ion-col size="4" class="ion-text-right">
+              <ion-button color="dark" size="small" (click)="addToCart(item)">
+                ADD TO CART
+                <ion-icon name="cart" slot="end"></ion-icon>
+              </ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+    </ion-card>
+  </ion-list>
 
   
-  
+</ion-content>
