--- a/src/app/pages/order3/order3.page.html
+++ b/src/app/pages/order3/order3.page.html
@@ -65,7 +65,7 @@
           </ion-col>
           <ion-col size="12" class="ion-text-right">
             <ion-label color="secondary">
-              <b>{{p.item_price | currency:'R'}}</b>
+              <b>{{p.price | currency:'R'}}</b>
             </ion-label>
           </ion-col>
         </ion-row>
