--- a/src/app/order/order.page.html
+++ b/src/app/order/order.page.html
@@ -30,8 +30,13 @@
     <ion-card-content>
       <ion-row class="ion-align-items-center">
         <ion-col size="8">
+          <ion-label>
+            {{p.item_description}}<br>
+          </ion-label>
+        </ion-col>
+        <ion-col class="ion-text-right">
           <ion-label color="secondary">
-            <b>{{p.item_price | currency:'R'}}</b>
+            <b>{{p.price | currency:'R'}}</b>
           </ion-label>
         </ion-col>
        
@@ -46,22 +51,18 @@
 
     <ion-slide >
       <ion-img class="" src="assets/images/food2.jpg" alt=""></ion-img>
-      <h2>Slide 1</h2>
     </ion-slide>
   
     <ion-slide >
       <ion-img class="" src="assets/images/food3.jpg" alt=""></ion-img>
-      <h2>Slide 2</h2>
     </ion-slide>
   
     <ion-slide >
       <ion-img class="" src="assets/images/food4.jpg" alt=""></ion-img>
-      <h2>Slide 3</h2>
     </ion-slide>
 
     <ion-slide >
       <ion-img class="" src="assets/images/food5.jpg" alt=""></ion-img>
-      <h2>Slide 4</h2>
     </ion-slide>
   
   </ion-slides>
