--- a/src/app/pages/order2/order2.page.html
+++ b/src/app/pages/order2/order2.page.html
@@ -44,8 +44,13 @@
       <ion-card-content>
         <ion-row class="ion-align-items-center">
           <ion-col size="8">
-            <ion-label color="secondary">
-              <b>{{p.item_price | currency:'R'}}</b>
+            <ion-label>
+              {{p.item_description}}<br>
+            </ion-label>
+          </ion-col>
+          <ion-col>
+            <ion-label color="secondary" class="ion-text-right">
+              <b>{{p.price | currency:'R'}}</b>
             </ion-label>
           </ion-col>
           
@@ -68,17 +73,14 @@
 
           <ion-slide >
             <ion-img class="" src="assets/images/kota1.jpg" alt=""></ion-img>
-            <h2>Slide 1</h2>
           </ion-slide>
         
           <ion-slide >
             <ion-img class="" src="assets/images/kota2.jpg" alt=""></ion-img>
-            <h3>Slide 2</h3>
           </ion-slide>
         
           <ion-slide >
             <ion-img class="" src="assets/images/food5.jpg" alt=""></ion-img>
-            <h4>Slide 3</h4>
           </ion-slide>    
         </ion-slides>
 
