--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -92,3 +92,6 @@
   <ion-button [disabled]="!addressForm.valid" type="submit" id="submit" (click)="order()">Confirm Payment</ion-button>
   
 </ion-content>
+
+// pushing to reset S.o.S
+
