--- a/src/app/pages/stripe/stripe.page.html
+++ b/src/app/pages/stripe/stripe.page.html
@@ -1,10 +1,7 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+  <ion-toolbar color="warning">
     <ion-title>
-      Stripe
+    KASI FOODHUB ONLINE PAYMENT
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,16 +9,16 @@
 <ion-content>
   <ion-grid text-center>
     <ion-row>
-      <ion-col>
-        Use this Pay button with the attached logic in your app's payment page.
+      <ion-col text-center>
+       Please ensure to never exchange your personal information with strangers.
       </ion-col>
     </ion-row>
   </ion-grid>
   <ion-card class="welcome-card">
-    <ion-img src="/assets/stripe.png"></ion-img>
+    <ion-img class ="image" src="/assets/images/stripe_covers.png"></ion-img>
     <ion-card-header>
-      <ion-card-subtitle>Get Started</ion-card-subtitle>
-      <ion-card-title>Stripe Sample</ion-card-title>
+    
+
       <ion-row>
         <ion-col>
           Total Payment
@@ -35,7 +32,7 @@
       <ion-button expand="full" color="success" (click)="payWithStripe()">Pay with Stripe</ion-button>
     </ion-card-content>
   </ion-card>
-  <ion-list lines="none">
+  <!-- <ion-list lines="none">
     <ion-list-header>
       <ion-label>Resources</ion-label>
     </ion-list-header>
@@ -55,5 +52,5 @@
       <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
       <ion-label>More Enappd Starters</ion-label>
     </ion-item>
-  </ion-list>
+  </ion-list> -->
 </ion-content>
