--- a/src/app/pages/stripe/stripe.page.scss
+++ b/src/app/pages/stripe/stripe.page.scss
@@ -1,4 +1,8 @@
 .welcome-card ion-img {
-  max-height: 35vh;
+  max-height: 700px;
+   max-width: 500px;
   overflow: hidden;
+   margin-left: 50rem;
+
+
 }
