aug 20 working cart

--- a/src/app/pages/cart-modal/cart-modal.page.html
+++ b/src/app/pages/cart-modal/cart-modal.page.html
@@ -78,7 +78,7 @@
       <ion-row>
         <ion-col>
             <div class="ion-text-start" color="secondary">
-                <p>Cart List</p>
+                <p>Review Order</p>
                 </div>
         </ion-col>
         <ion-col>
