--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -82,7 +82,7 @@
             <ion-card (click)="gotoMenu1()">
               <ion-img class = "back-image" src="/assets/images/logo2.jpg"></ion-img>
               <ion-card-content>
-                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <ion-card-title>Kasi Food</ion-card-title>
                 <p>Delicious Dish</p>
               </ion-card-content>
               
@@ -90,7 +90,7 @@
           </ion-col>
 
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoVendorMenu2()" >
+            <ion-card (click)="gotoMenu2()" >
               <ion-img class = "back-image" src="/assets/images/logo.png"></ion-img>
               <ion-card-content>
                 <ion-card-title>Nkukhu Box</ion-card-title>
@@ -98,24 +98,12 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-       
-          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoVendorMenu3()">
-              <ion-img class = "back-image" src="/assets/images/food1.png"></ion-img>
-              <ion-card-content>
-                <ion-card-title>Rata nanma</ion-card-title>
-                <p>Monate wa nama</p>
-              </ion-card-content>
-              
-            </ion-card>
-           
-          </ion-col>
 
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu1()">
-              <ion-img src="/assets/images/food2.jpg"></ion-img>
+            <ion-card (click)="gotoMenu3()">
+              <ion-img src="/assets/images/logo4.jpeg"></ion-img>
               <ion-card-content>
-                <ion-card-title>Ashley's grilled Chicken</ion-card-title>
+                <ion-card-title>Jay's Eatery</ion-card-title>
                 <p>SA's best chicken grillers</p>
               </ion-card-content>
             </ion-card>
