--- a/src/app/pages/cart-modal/cart-modal.page.html
+++ b/src/app/pages/cart-modal/cart-modal.page.html
@@ -1,5 +1,5 @@
 
-<!-- <ion-content fullscreen>
+ <ion-content fullscreen>
   
   <div class="ion-text-end">
     <ion-button (click)="close()" fill="clear" color="dark">
@@ -49,13 +49,13 @@
         </ion-grid>
       </ion-item>
     </ion-card>
+    </ion-list>
+  </div>
       <ion-item>
         <ion-row>
           <ion-col color="tertiary" ><b>Total</b>
             {{getTotal() | currency:'R'}}</ion-col> 
         </ion-row>
       </ion-item>
-    </ion-list>
-  </div>
     <ion-button id="check" expand="full" (click)="checkoutProduct()" (click)="checkout()" (click)="close()">Checkout</ion-button>
 </ion-content>
