--- a/src/app/pages/order2/order2.page.html
+++ b/src/app/pages/order2/order2.page.html
@@ -53,7 +53,7 @@
 
         </ion-col>
   
-        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+       <!-- <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
           <ion-card>
             <ion-img class = "back-image" src="/assets/images/logo.png" (click) = "addToCart(product)"></ion-img>
             <ion-card-content>
@@ -90,7 +90,7 @@
   
       </ion-row>
   
-      <ion-row> <!--This is just one row with mulitiple columns-->
+      <ion-row> This is just one row with mulitiple columns
         <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
           <ion-card>
             <ion-img src="/assets/images/food3.jpg"></ion-img>
@@ -139,7 +139,7 @@
   
       </ion-row>
   
-      <ion-row> <!--This is just one row with mulitiple columns-->
+      <ion-row> This is just one row with mulitiple columns
         <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
           <ion-card>
             <ion-img class = "back-image" src="/assets/images/kota.png"></ion-img>
@@ -186,7 +186,7 @@
   
       </ion-row>
   
-      <ion-row> <!--This is just one row with mulitiple columns-->
+      <ion-row> This is just one row with mulitiple columns
         <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
           <ion-card>
             <ion-img class = "back-image" src="/assets/images/kota4.jpg"></ion-img>
@@ -229,7 +229,7 @@
             </ion-card-content>
           </ion-card>
         </ion-col>
-  
+  -->
       </ion-row>
   
     </ion-grid>
