--- a/src/app/pages/singupadmin/singupadmin.page.html
+++ b/src/app/pages/singupadmin/singupadmin.page.html
@@ -25,7 +25,7 @@
 
      <ion-item>
         <ion-label position="floating">Address</ion-label>
-        <ion-textarea type = "text" [(ngModel)]= "address_loc" name = "address_loc"></ion-textarea>
+        <ion-textarea type = "text" [(ngModel)]= "address_loc" placeholder="Address" name = "address_loc"></ion-textarea>
      </ion-item>
 
       <ion-item>
@@ -35,7 +35,7 @@
 
       <ion-item>
         <ion-label  position="floating">Confirm Password</ion-label>
-        <ion-input type= "password" [(ngModel)]= "conPassword" name= "conP"></ion-input>
+        <ion-input type= "password" [(ngModel)]= "conPassword"></ion-input>
       </ion-item>
 
       <ion-item>
