revert to old state

--- a/src/app/pages/stripe/stripe.page.html
+++ b/src/app/pages/stripe/stripe.page.html
@@ -24,7 +24,7 @@
           Total Payment
         </ion-col>
         <ion-col>
-          {{currencyIcon}}{{paymentAmount}}
+          {{currencyIcon}}{{total}}
         </ion-col>
       </ion-row>
     </ion-card-header>
